@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Application
 Name=@PACKAGE_NAME@
-GenericName=A simple color selection dialog in GTK3
-Comment=Choose colors from palette or screen
+_GenericName=A simple color selection dialog in GTK3
+_Comment=Choose colors from palette or screen
 Icon=gcolor2
 Terminal=false
 Exec=@PACKAGE@
