@@ -1,5 +1,6 @@
 # List of source files containing translatable strings.
 
+data/gcolor3.desktop.in
 src/main.c
 src/callbacks.c
 src/ui.c
